# fastapi-starter-with-authentication

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/controllers/: UserController.py
app/middleware/: VerifyToken.py
app/models/: UserModel.py
app/routers/: OAuthRouter.py  UserRouter.py
app/schemas/: UserSchema.py
