[project]
name = "fastapi-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "authlib>=1.6.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.0",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
]
